# pydem

./: .gitignore  CHANGELOG.md  INSTALL.md  MANIFEST.in  README.md  RELEASE.md  pyproject.toml  setup.py  test.py
Docker/: Dockerfile  pydem_basic_user_guide.md  requirements.txt  test_container.py
aws/: handler.py  link_so.py  mk_dist.py  mk_dist.sh
docker/: Dockerfile  pydem_user_guide.md  requirements.txt
pydem/: CHANGELOG.md  Timing.ipynb  __init__.py  commandline_utils.py  compute_manager.py  dem_processing.py  process_manager.py  processing_manager.py  test_pydem.py  utils.py  utils_test_pydem.py
pydem/cyfuncs/: cyutils.def  cyutils.pyx
pydem/examples/: compare_tile_to_chunk.py  compare_to_taudem.py  cross-tile_process_manager_test.py  process_array.py  process_manager_directory.py
pydem/reader/: gdal_reader.py  inpaint.pyx  my_types.py
pydem/taudem/: README.md  taudem.py
pydem/taudem/taudem_Linux/: aread8  areadinf  d8flowdir  d8flowpathextremeup  d8hdisttostrm  dinfavalanche  dinfconclimaccum  dinfdecayaccum  dinfdistdown  dinfdistup  dinfflowdir  dinfrevaccum  dinftranslimaccum  dinfupdependence  dropanalysis  gridnet  lengtharea  license.txt  moveoutletstostrm  peukerdouglas  pitremove  slopearea  slopearearatio  slopeavedown  streamnet  threshold
pydem/taudem/taudem_Windows/: taudem source.txt
pydem/test/: test_NN032_033_elev.tif  test_docker_container.py  test_end_to_end.py
